[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmpt479-term-proj"
version = "0.1.0"
classifiers = ["Framework :: Pytest"]
dependencies = ["coverage"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.entry-points.pytest11]
yourplugin = "src.pytest_hook"
